# zipkin-cpp

./: .gitignore  .travis.yml  BUILD.gn  CMakeLists.txt  Doxyfile  Jenkinsfile  README.md  SConstruct  conanfile.txt  zipkin.pc.in  zipkinCore.thrift
.travis/: install-dependencies.sh
bench/: BenchSpan.cpp  CMakeLists.txt
ci/: Dockerfile  Dockerfile-centos-7  Dockerfile-ubuntu-xenial  README.md  build-container.sh  build-dist.sh  build-image.sh  docker-entrypoint.sh
cmake/: FindDoubleConversion.cmake  FindFolly.cmake  FindGBench.cmake  FindGFlags.cmake  FindGLog.cmake  FindGMock.cmake  FindGRPC.cmake  FindGperftools.cmake  FindLibRDKafka.cmake  FindThrift.cmake  FindZipkin.cmake  InstallCURL.cmake  InstallDoubleConversion.cmake  InstallExternalProjects.cmake  InstallFolly.cmake  InstallGBench.cmake  InstallGFlags.cmake  InstallGLog.cmake  InstallGTest.cmake  InstallLibRDKafka.cmake  InstallRapidJSON.cmake  InstallThrift.cmake  InstallZLib.cmake
conan/: conanbuildinfo.txt  conanfile.py  conaninfo.txt
conan/test_package/: CMakeLists.txt  conanfile.py  main.cpp
docs/: Build.md  CMakeLists.txt  GettingStarted.md
examples/: CMakeLists.txt
examples/grpc_greeter/: CMakeLists.txt  greeter_async_client.cc  greeter_async_server.cc  greeter_client.cc  greeter_server.cc
examples/simple_proxy/: CMakeLists.txt  main.c
examples/simple_webserver/: main.c
gen-cpp/: zipkinCore_constants.cpp  zipkinCore_constants.h  zipkinCore_types.cpp  zipkinCore_types.h
include/: zipkin.h  zipkin.hpp
src/: Base64.h  CApi.cpp  CMakeLists.txt  Collector.cpp  Collector.h  Config.h.in  HttpCollector.cpp  HttpCollector.h  Kafka.cpp  Kafka.h  KafkaCollector.cpp  KafkaCollector.h  Propagation.cpp  Propagation.h  ScribeCollector.cpp  ScribeCollector.h  Span.cpp  Span.h  Tracer.cpp  Tracer.h  Version.h.in  XRayCollector.cpp  XRayCollector.h
test/: CMakeLists.txt  Mocks.hpp  TestCollector.cpp  TestMain.cpp  TestSpan.cpp  TestTracer.cpp
